# rust-awssdk-snipet

./: Cargo.toml  README.md
src/: main.rs
