[package]
name = "rust-awssdk-snipet"
version = "0.1.0"
authors = ["aibou <aibou7251@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.3.0"
aws-sdk-s3 = "0.3.0"
# aws-sdk-sts = "0.3.0"
tokio = { version = "1", features = ["full"] }
